--- a/pom.xml
+++ b/pom.xml
@@ -41,8 +41,15 @@
 	</dependency>
 	
 	<dependency>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-webflux</artifactId>
+    	<groupId>org.springframework.boot</groupId>
+    	<artifactId>spring-boot-starter-webflux</artifactId>
+	</dependency>
+	
+	<dependency>
+   	<groupId>com.squareup.okhttp3</groupId>
+   		<artifactId>mockwebserver</artifactId>
+   		<version>4.10.0</version>
+   	<scope>test</scope>
 	</dependency>
 	
 	</dependencies>
