--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,19 @@
    	<scope>test</scope>
 	</dependency>
 	
+	<dependency>
+            <groupId>com.github.librepdf</groupId>
+            <artifactId>openpdf</artifactId>
+            <version>1.3.26</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>2.0.25</version>
+            <scope>compile</scope>
+        </dependency>
+		
 	</dependencies>
 
 	<build>
