--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,13 @@
 	</dependency>
 	
 	<dependency>
+		<groupId>org.projectlombok</groupId>
+		<artifactId>lombok</artifactId>
+		<version>1.18.24</version>
+		<scope>provided</scope>
+	</dependency>
+	
+	<dependency>
             <groupId>com.github.librepdf</groupId>
             <artifactId>openpdf</artifactId>
             <version>1.3.26</version>
